About page horizontal scrolling fixed on some screen sizes

--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -19,6 +19,15 @@
   position: relative;
 }
 
+@media (max-width: 380px) {
+  .about-container {
+    padding: 0;
+  }
+  .lang-container {
+    border-radius: 0;
+  }
+}
+
 .credits {
   position: absolute;
   bottom: 0;
